@@ -10,6 +10,7 @@
   - 并发与多线程
 - 常见面试题要点（示例）
 - 实战案例与练习题（含解题要点）
+- 面试题及答案
 
 ---
 
@@ -39,7 +40,7 @@
 
 ### 并发与多线程
 - 线程创建方式、线程生命周期、线程池（ThreadPoolExecutor）参数理解与调优。
-- synchronized、ReentrantLock、volatile、Atomic* 的语义与适用场景。
+- synchronized、ReentrantLock、volatile、Atomic* 的语���与适用场景。
 - 线程间协作：wait/notify、Condition、CountDownLatch、CyclicBarrier、Semaphore、Exchanger。
 - 并发容器与无锁编程：ConcurrentHashMap、ConcurrentLinkedQueue、CAS 原理（ABA 问题）与解决方案（版本号、AtomicStampedReference）。
 - 常见并发问题：死锁、活锁、饥饿、竞态条件，如何定位与修复（线程 dump 分析、锁定位）。
@@ -121,4 +122,51 @@
 - 《深入理解 Java 虚拟机》
 - 官方 JDK 文档与 JEP 说明（GC、内存模型相关）
 - 常用工具：jstack、jmap、jstat、jcmd、VisualVM、MAT、async-profiler
+
+---
+
+## 面试题及答案
+
+1. 问：HashMap 为什么要扩容？扩容时发生了什么？
+   答：为保证平均 O(1) 的查找效率，HashMap 使用负载因子（默认 0.75）来触发扩容。当 size > threshold 时触发扩容，JDK8 及以后会创建更大的 table 并把已有节点重新分配到新的桶中（重新计算 index）。链表长度超过阈值时会转换为红黑树以降低最坏情况复杂度。从面试角度要说明扩容的开销（需要 rehash、复制数组）以及并发环境下的风险（并发扩容可能导致数据丢失或性能问题）。
+
+2. 问：volatile 的作用是什么？能替代 synchronized 吗？
+   答：volatile 保证可见性（写入后其他线程能及时看到）和禁止指令重排序（对该变量的读取/写入不会被重排序到其他内存操作之前或之后）。它不能保证多个操作的原子性（如 i++ 不是原子操作），因此不能完全替代 synchronized。在需要对复合操作或涉及多个变量的同步时，应使用锁（synchronized / ReentrantLock）。
+
+3. 问：ConcurrentHashMap 与 HashMap 的主要区别？并发场景下该如何选择？
+   答：HashMap 线程不安全，ConcurrentHashMap 在并发场景下保证线程安全且高性能（JDK8 用 CAS + synchronized + 分段思想实现无全局锁的并发访问）。在高并发读写下应优先使用 ConcurrentHashMap；如果只读多写少且需要强一致性快照，可考虑 CopyOnWriteArrayList/Set 或对整个集合加锁。
+
+4. 问：AtomicLong 和 LongAdder 有什么区别？什么时候用哪种？
+   答：AtomicLong 使用单一的 CAS 更新同一个变量，写热点高时 CAS 重试会造成性能下降。LongAdder 采用分段（cells）设计，将更新分散到多个槽以减少竞争，读取总和时需要汇总各槽的值。若写操作极高且对即时精准度要求不高（允许稍微延迟的读取），LongAdder 更适合；对要求严格一致性和读频较高的场景，AtomicLong 更简单且读成本低。
+
+5. 问：synchronized 与 ReentrantLock 的区别？
+   答：synchronized 是内置锁，语法简洁，JVM 能做优化（如偏向锁、轻量级锁）；ReentrantLock 是显式锁，支持公平/非公平选项、可中断的锁获取、Condition（多路等待队列）以及更灵活的尝试获取（tryLock）。若需要公平性控制、可中断或多个条件变量，选择 ReentrantLock；普通场景首选 synchronized（更安全、代码更简洁）。
+
+6. 问：如何排查内存泄漏？主要步骤是什么？
+   答：步骤：收集堆快照（jmap），分析 heap dump（MAT / VisualVM），查看占用最大的对象与其 GC Roots（who is keeping them alive）。同时检查线程 dump（jstack）看是否有大量线程或任务未结束；审查代码中的常见泄漏点：静态集合、未清理的 ThreadLocal、外部资源未关闭、缓存/监听器/连接池没有边界。解决方法包括修复持有引用、引入缓存大小限制或使用弱引用、改进资源释放流程并增加监控。
+
+7. 问：什么是死锁，如何定位和解决？
+   答：死锁是两个或多个线程互相等待对方持有的锁，导致都无法继续执行。定位方法：获取线程 dump（jstack）查看线程状态和锁持有/等待关系（jstack 的输出会指出 deadlock），也可以用 VisualVM 或 async-profiler。解决方法：保证锁获取顺序一致、减少持锁时间、使用 tryLock + 超时避免永久等待，或使用更高层的并发结构（避免手工持有多个锁）。
+
+8. 问：描述 Java 的类加载机制和双亲委派模型。
+   答：类加载分为加载、验证、准备、解析、初始化阶段。双亲委派模型中，一个类加载请求首先委派给父加载器，如果父加载器无法加载则由子加载器尝试加载。此机制避免了重复加载核心 Java 类并提高安全性。在特定场景（如热部署、插件系统）可能会自定义类加载器，需注意避免 ClassLoader 泄漏与重复类定义。
+
+9. 问：String 常量池中 == 与 equals 的区别？
+   答：`==` 比较对象引用是否相同（是否指向同一地址），`equals` 比较对象的逻辑相等性。String 的字面量会被放入常量池，两个字面量相同的 String 通常引用同一对象（因此 == 为 true），但通过 `new String("x")` 会创建新的对象，== 为 false，需用 equals 比较内容。
+
+10. 问：如何设计一个线程池（ThreadPoolExecutor）参数？
+    答：根据任务特性选择：
+    - CPU 密集型：核心线程数 ≈ CPU 核数（n），避免创建过多线程。
+    - IO 密集型：核心线程数可 > CPU 核数，视 IO 等待比例增加线程数。
+    - 队列选择：SynchronousQueue（直交给线程）适合短任务并快速扩容，ArrayBlockingQueue/LinkedBlockingQueue 适合缓冲；使用有界队列避免 OOM。
+    - 拒绝策略：在达到最大容量时选择合适策略（AbortPolicy/CallerRunsPolicy/DiscardPolicy/DiscardOldestPolicy）。
+
+11. 问：什么是 Java 内存模型（JMM）中的 happens-before 规则？
+    答：happens-before 是一组保证操作可见性与有序性的规则，若操作 A happens-before 操作 B，则 A 的结果对 B 可见。常见的 happens-before 包括：程序顺序规则、监视器锁入/解锁、volatile 读/写、线程 start/join、传递性等。理解该规则对正确并发设计非常重要。
+
+12. 问：如何分析一次 Full GC 并减少 Full GC 频率？
+    答：分析步骤：查看 GC 日志（-Xlog:gc*），定位 GC 类型、停顿时间、各代占用及晋升失败原因；结合堆快照判断大对象或长寿命对象。减少策略：调大堆或年轻代大小，调整晋升阈值（-XX:MaxTenuringThreshold），使用更适合的收集器（G1）、修复应用层内存泄漏或控制缓存大小。
+
+
+---
 
